# Todo-App

./: .gitignore  pyproject.toml  requirements.txt
staticfiles/css/: login.css
tasks/: forms.py  models.py  urls.py  views.py
tasks/templates/tasks/: index.html  task_edit.html
templates/: admin_dashboard.html  admin_navbar.html  base.html  home.html  index.html  user_dashboard.html  user_navbar.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
templates/tasks/: admin_index.html  task_edit.html  user_tasks.html
templates/users/: change_password.html  login.html  profile_edit.html  profile_edit_ajax.html  signup.html
todo/: settings.py  urls.py
users/: decorators.py  forms.py  models.py  views.py
users/templates/users/: login.html  signup.html
