[tool.poetry]
name = "poetry-todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
django-model-utils = "^4.1.1"
Pillow = "^8.1.0"
fontawesome = "^5.10.1"

[tool.poetry.dev-dependencies]

#add following dependencies

#mypy
#pyls-mypy 
#black
#isort
#bandit
#pre-commit
#pyflakes
#flake8

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
